8286066: FillerObject_klass should be loaded as early as possible